data/issues_nolabel/nolabel_test_16512.txt
how to install ffmpeg in tensorflow 1.4 binary

hi
i want to install ffmpeg in tensorflow 1.4 binary , python 3.5 on ubuntu 16.04 , please help me how do i do ?
the output type python -c "from tensorflow.contrib import ffmpeg" is ok dont have anly error , but i dont know why :
from tensorflow.contrib import ffmpeg
i get error ,



from tensorflow.contrib import ffmpeg
File "", line 1
from tensorflow.contrib import ffmpeg
^
IndentationError: unexpected indent